Additional sorting filters and detail page commit

--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -4,6 +4,11 @@
   flex-wrap: wrap;
   gap: 1rem;
   justify-content: center;
+  cursor: pointer;
+}
+
+.cardContainer:hover {
+  transform: scale(1.01);
 }
 
 .imgContainer {
